--- a/style.css
+++ b/style.css
@@ -1,97 +1,131 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;    
 }
 img{
     width: 100%;
 }
-.parent{
-    height: 100vh;
+/* ----------------------------Header */
+header{
+    height: 5.5rem;
     width: 100%;
-    background-image: linear-gradient(to bottom left,rgb(197, 95, 197), rgb(122, 203, 226));
-    display: flex;
+
 }
- .parent .container{
+header ul{
+    display:flex;
+    justify-content: space-evenly;
+    margin: auto 0;
+    background-color: rgba(100, 50, 190, 0.8);
+    
+}
+
+header ul li{
+    list-style: none;
+    padding: 30px;
+
+}
+
+header ul li a{
+    text-decoration: none;
+    font-size: 25px;
+    font-weight: 500;  
+    color: white; 
+}
+header ul li a:hover{
+    color: rgb(250, 216, 250);
+    text-decoration: underline;
+}
+
+/* ----------------------------Intro-container */
+.intro-container{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height:100vh;
     flex-direction: column;
-    background-color: white;
-    min-width: 600px;
-    height: 980px;
-    border-radius: 25px;
-    margin: auto;  
+    background-color: rgb(238, 230, 238);
 }
-
-.container h1{
-    font-size: 50px;
+.left-text h2{
+    color: black;    
+    animation: leftintro 2s ;
     display: flex;
     justify-content: center;
-    margin-bottom: 60px;
+    font-size: 35px;
 }
-
-.parent .container .form-input input{
-    height: 50px;
-    font-size: 25px;
+.right-text h3{
+    font-size: 4.5rem;
     display: flex;
-    flex-direction: column;
-    border: 0;
-    color: rgb(180, 178, 178);
-    border-bottom: 1px solid rgb(180, 178, 178);
-    width: 100%;
-    padding: 40px;
-}
-.parent .container .form-input input:focus{
-    outline: 0;
-}
-.parent .container .form-input .user-input{
-    font-size: 25px;  
-    margin-bottom: 25px;
-    margin-top: 25px;
+    justify-content: center;
+    animation: rightintro 2s ;
+    
 }
 
-.parent .container .form-input .forgot-password h4{
-    font-size: 20px;
-    font-weight: 100;
-    text-align: right;
-    margin-bottom: 40px;
-}
-.parent .container .form-input .button button{
-    height: 80px;
+/* ----------------------------Form */
+/* .form-container{
+    display: flex;
+    height: 100vh;
     width: 100%;
-    color: white;
-    font-size: 25px;
-    cursor: pointer;
-    background-image: linear-gradient(to right, cyan, rgb(220, 124, 255), purple);
-    border-radius: 35px;
-    border: 1px solid white;
+    justify-content: space-evenly;
 }
-.parent .container .form-input h5{
-    font-size: 30px;
-    font-weight: 100;
-    text-align: center;
-    margin-top: 70px;
+.form-container .form-data{
+    min-width: 600px;
+    height: 80%;
+    padding: 50px;
     
-    margin-bottom: 25px;
-   
-}
-.parent .container .form-input{
-}
-.parent .container .form-input .social-icon {
-    width: 80px;
-    height: 80px;
+    
+
+} 
+.form-container .form-top{
+    width: 100%;
+    height: 10%;
+    background-color: rgba(100, 50, 190, 0.8);
+} 
+.form-container form .user-input{
+    font-size: 2rem;
     padding: 10px;
-    display: flex;
     
 }
-    
-.parent .container .form-input .social-icons {
-    display: flex;
-    justify-content: center; 
-}
-    
- */
+.form-container form .user-input input{
+    height: 45px;
+    width: 100%;
+    font-size: 25px;
+    border-radius: 10px;
+} 
+.form-container .form-bg{
+    width: 50%;
+    height: 100%;
+    background-image: url(./bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+} 
 
-    
+.form-container .form-data .form-submit-button button{
+    width: 100%;
+    height: 60px;
+    font-size: 25px;
+    border-radius: 10px;
+    margin-top: 20px;
+    color: white;
+    background-color: rgba(100, 50, 190, 0.8);
+}
+.form-container .form-data .user-input input .form-submit-button button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
+
+
+
+
+@keyframes leftintro{
+    0%{ transform: translateX(-500%) }
+    100%{transform: translateX(0%);}
+}
+
+@keyframes rightintro{
+    0%{transform: translateX(300%)}
+    100%{transform: translateX(0%)}
+}
